feat: api tag and favorite
